--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,11 +32,16 @@ services:
     environment:
         PROMETHEUS_HOST: localhost
         PROMETHEUS_PORT: 8428
-    volumes:
-      - ./misc/collector_config_test.yaml:/config/config.yaml
+        BOREALIS_HOST: console
+        BOREALIS_PORT: 8081
+        AGENT_DISABLED: 1
+        INSTANCE_NAMES: postgres_one
+        postgres_one_CLUSTER_NAME: mycluster
+        postgres_one_HOST: postgres_one
+        postgres_one_PASSWORD: zalando
+        postgres_one_USERNAME: postgres
     ports:
       - "9187:9187"
-    network_mode: host
 
   clickhouse:
     image: clickhouse/clickhouse-server
@@ -79,17 +84,17 @@ services:
 #      PGPASSWORD: zalando
 #      PGDATABASE: postgres
 
-#  postgres_one:
-#    image: ghcr.io/zalando/spilo-16:3.2-p2
-#    hostname: postgres_one
-#    ports:
-#      - "5432:5432"
-#    container_name: postgres_one
-#    environment:
-#      SPILO_CONFIGURATION: '{ "postgresql": { "log_destination": "stderr", "parameters": {"shared_preload_libraries": "bg_mon,pg_stat_statements,pg_stat_kcache,pgextwlist,pg_auth_mon,set_user,pg_cron,auto_explain", "auto_explain.sample_rate": 1, "auto_explain.log_min_duration": 0, "auto_explain.log_verbose":true, "auto_explain.log_triggers":true, "auto_explain.log_timing": true, "auto_explain.log_analyze": true, "auto_explain.log_buffers": true, "auto_explain.log_format": "JSON", "auto_explain.log_nested_statements": true, "auto_explain.log_settings": true, }, "pg_hba": [ "local all all trust","local replication standby trust", "host all  all  0.0.0.0/0 md5", "hostssl replication standby all md5" ] } }'
-#      SCOPE: mycluster
-#      PGVERSION: '16'
-#      DOMAIN_NAME: 'domain.com.'
-#      CLUSTER_NAME: mycluster
-#    volumes:
-#      - ./misc/init.sql:/docker-entrypoint-initdb.d/init.sql
+  postgres_one:
+    image: ghcr.io/zalando/spilo-16:3.3-p2
+    hostname: postgres_one
+    ports:
+      - "5432:5432"
+    container_name: postgres_one
+    environment:
+      SPILO_CONFIGURATION: '{ "postgresql": { "log_destination": "stderr", "parameters": {"shared_preload_libraries": "bg_mon,pg_stat_statements,pg_stat_kcache,pgextwlist,pg_auth_mon,set_user,pg_cron,auto_explain", "auto_explain.sample_rate": 1, "auto_explain.log_min_duration": 0, "auto_explain.log_verbose":true, "auto_explain.log_triggers":true, "auto_explain.log_timing": true, "auto_explain.log_analyze": true, "auto_explain.log_buffers": true, "auto_explain.log_format": "JSON", "auto_explain.log_nested_statements": true, "auto_explain.log_settings": true, }, "pg_hba": [ "local all all trust","local replication standby trust", "host all  all  0.0.0.0/0 md5", "hostssl replication standby all md5" ] } }'
+      SCOPE: mycluster
+      PGVERSION: '16'
+      DOMAIN_NAME: 'domain.com.'
+      CLUSTER_NAME: mycluster
+    volumes:
+      - ./misc/init.sql:/docker-entrypoint-initdb.d/init.sql
