--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,8 @@ services:
         postgres_one_USERNAME: postgres
     ports:
       - "9187:9187"
+    volumes:
+      - postgres-logs-volume:/logs/postgres
 
   clickhouse:
     image: clickhouse/clickhouse-server
@@ -72,6 +74,30 @@ services:
       - "--influxListenAddr=:8089"
     restart: always
 
+  loki:
+    container_name: loki
+    image: grafana/loki:3.0.0
+    command: '-config.file=/mnt/config/loki-config.yaml'
+    ports:
+      - '3100:3100'
+    volumes:
+      - ./misc/loki-config.yaml:/mnt/config
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:8.5.1
+    depends_on:
+      - victoriametrics
+    environment:
+      - GF_INSTALL_PLUGINS=grafana-clickhouse-datasource
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./console/grafana/provisioning:/etc/grafana/provisioning
+      - ./console/grafana/dashboards:/var/lib/grafana/dashboards
+      - ./console/grafana/config/grafana.ini:/etc/grafana/grafana.ini
+    restart: always
+
 #  pgbench:
 #    container_name: pgbench
 #    image: borealis/pgbench:latest
@@ -98,3 +124,7 @@ services:
       CLUSTER_NAME: mycluster
     volumes:
       - ./misc/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres-logs-volume:/home/postgres/pgdata/pgroot/pg_log
+
+volumes:
+  postgres-logs-volume:
