--- a/console/config/templates/grafana-template.ini
+++ b/console/config/templates/grafana-template.ini
@@ -11,8 +11,8 @@ data = /borealis/db
 # enable gzip
 enable_gzip = true
 ;domain = example.com
-root_url = %(protocol)s://%(domain)s:%(http_port)s{{.RootUrlPath}}
-serve_from_sub_path = true
+;root_url = %(protocol)s://%(domain)s:%(http_port)s{{.RootUrlPath}}
+serve_from_sub_path = false
 
 #################################### Dashboards History ##################
 [dashboards]
@@ -60,6 +60,7 @@ enabled = false
 [auth.anonymous]
 # enable anonymous access
 enabled = true
+org_role = Admin
 {{- end}}
 
 
