--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,10 @@ services:
       LOG_LEVEL: debug
       CLICKHOUSE_HOST: clickhouse
       PROMETHEUS_HOST: victoriametrics
+      LOKI_HOST: loki
+      CONSOLE_DISABLED: 1
+      NGINX_DISABLED: 1
+      GF_FEATURE_TOGGLES_ENABLE: accessControlOnCall
     ports:
       - "8082:8082"
       - "8081:8081"
@@ -30,10 +34,9 @@ services:
         USER: agent
         GROUP: borealis
     environment:
-        PROMETHEUS_HOST: localhost
-        PROMETHEUS_PORT: 8428
+        PROMETHEUS_HOST: victoriametrics
         BOREALIS_HOST: console
-        BOREALIS_PORT: 8081
+        LOKI_HOST: loki
         AGENT_DISABLED: 1
         INSTANCE_NAMES: postgres_one
         postgres_one_CLUSTER_NAME: mycluster
@@ -76,39 +79,24 @@ services:
 
   loki:
     container_name: loki
-    image: grafana/loki:3.0.0
-    command: '-config.file=/mnt/config/loki-config.yaml'
+    image: grafana/loki:main
+    command: '-config.file=/data/loki-config.yaml'
     ports:
       - '3100:3100'
     volumes:
-      - ./misc/loki-config.yaml:/mnt/config
+      - data-volume:/data
 
-  grafana:
-    container_name: grafana
-    image: grafana/grafana:8.5.1
-    depends_on:
-      - victoriametrics
+  pgbench:
+    container_name: pgbench
+    image: borealis/pgbench:latest
+    build:
+      dockerfile: pgbench.Dockerfile
+      context: misc/pg_bench
+    command: postgres_one
     environment:
-      - GF_INSTALL_PLUGINS=grafana-clickhouse-datasource
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./console/grafana/provisioning:/etc/grafana/provisioning
-      - ./console/grafana/dashboards:/var/lib/grafana/dashboards
-      - ./console/grafana/config/grafana.ini:/etc/grafana/grafana.ini
-    restart: always
-
-#  pgbench:
-#    container_name: pgbench
-#    image: borealis/pgbench:latest
-#    build:
-#      dockerfile: pgbench.Dockerfile
-#      context: misc/pg_bench
-#    command: postgres_one
-#    environment:
-#      PGUSER: postgres
-#      PGPASSWORD: zalando
-#      PGDATABASE: postgres
+      PGUSER: postgres
+      PGPASSWORD: zalando
+      PGDATABASE: postgres
 
   postgres_one:
     image: ghcr.io/zalando/spilo-16:3.3-p2
@@ -117,7 +105,7 @@ services:
       - "5432:5432"
     container_name: postgres_one
     environment:
-      SPILO_CONFIGURATION: '{ "postgresql": { "log_destination": "stderr", "parameters": {"shared_preload_libraries": "bg_mon,pg_stat_statements,pg_stat_kcache,pgextwlist,pg_auth_mon,set_user,pg_cron,auto_explain", "auto_explain.sample_rate": 1, "auto_explain.log_min_duration": 0, "auto_explain.log_verbose":true, "auto_explain.log_triggers":true, "auto_explain.log_timing": true, "auto_explain.log_analyze": true, "auto_explain.log_buffers": true, "auto_explain.log_format": "JSON", "auto_explain.log_nested_statements": true, "auto_explain.log_settings": true, }, "pg_hba": [ "local all all trust","local replication standby trust", "host all  all  0.0.0.0/0 md5", "hostssl replication standby all md5" ] } }'
+      SPILO_CONFIGURATION: '{ "postgresql": { "log_destination": "stderr", "parameters": {"shared_preload_libraries": "bg_mon,pg_stat_statements,pg_stat_kcache,pgextwlist,pg_auth_mon,set_user,pg_cron"}, "pg_hba": [ "local all all trust","local replication standby trust", "host all  all  0.0.0.0/0 md5", "hostssl replication standby all md5" ] } }'
       SCOPE: mycluster
       PGVERSION: '16'
       DOMAIN_NAME: 'domain.com.'
@@ -128,3 +116,6 @@ services:
 
 volumes:
   postgres-logs-volume:
+  data-volume:
+    external: true
+    name: data-volume
