--- a/misc/loki-config.yaml
+++ b/misc/loki-config.yaml
@@ -1,31 +1,27 @@
 auth_enabled: false
 
+limits_config:
+  allow_structured_metadata: true
+  volume_enabled: true
+  ingestion_rate_mb: 10240
+  ingestion_burst_size_mb: 10240
+
 server:
   http_listen_port: 3100
-  grpc_listen_port: 9096
+  grpc_server_max_recv_msg_size: 104857600 # 100 MB, might be too much, be careful
+  grpc_server_max_send_msg_size: 104857600 # 100 MB, might be too much, be careful
 
 common:
-  instance_addr: 127.0.0.1
-  path_prefix: /tmp/loki
-  storage:
-    filesystem:
-      chunks_directory: /tmp/loki/chunks
-      rules_directory: /tmp/loki/rules
-  replication_factor: 1
   ring:
+    instance_addr: 0.0.0.0
     kvstore:
       store: inmemory
-
-query_range:
-  results_cache:
-    cache:
-      embedded_cache:
-        enabled: true
-        max_size_mb: 100
+  replication_factor: 1
+  path_prefix: /tmp/loki
 
 schema_config:
   configs:
-    - from: 2020-10-24
+    - from: 2020-05-15
       store: tsdb
       object_store: filesystem
       schema: v13
@@ -33,18 +29,15 @@ schema_config:
         prefix: index_
         period: 24h
 
-ruler:
-  alertmanager_url: http://localhost:9093
+storage_config:
+  tsdb_shipper:
+    active_index_directory: /tmp/loki/index
+    cache_location: /tmp/loki/index_cache
+  filesystem:
+    directory: /tmp/loki/chunks
 
-# By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
-# analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
-#
-# Statistics help us better understand how Loki is used, and they show us performance
-# levels for most users. This helps us prioritize features and documentation.
-# For more information on what's sent, look at
-# https://github.com/grafana/loki/blob/main/pkg/analytics/stats.go
-# Refer to the buildReport method to see what goes into a report.
-#
-# If you would like to disable reporting, uncomment the following lines:
+pattern_ingester:
+  enabled: true
+
 analytics:
   reporting_enabled: false
